--- a/Walmart-SQL.ipynb
+++ b/Walmart-SQL.ipynb
@@ -3,8 +3,13 @@
   {
    "cell_type": "raw",
    "id": "586440d9-f610-460d-8393-954e1e8b5328",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
+    "'''\n",
     "-- Data cleaning\n",
     "SELECT\n",
     "\t*\n",
@@ -55,7 +60,8 @@
     "ALTER TABLE sales ADD COLUMN month_name VARCHAR(10);\n",
     "\n",
     "UPDATE sales\n",
-    "SET month_name = MONTHNAME(date);"
+    "SET month_name = MONTHNAME(date);\n",
+    "'''"
    ]
   },
   {
